--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Services
+                Skills
               </h3>
               <p class="subtitle-a">
                 Beberapa layanan yang saya miliki.
@@ -599,10 +599,10 @@
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href="https://www.facebook.com/fawaz.hutomiabdurahman"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href="https://www.instagram.com/hutomifawaza/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                        <li><a href="https://github.com/FawazHutomiA"><span class="ico-circle"><i class="bi bi-github"></i></span></a></li>
-                        <li><a href="https://www.linkedin.com/in/fawaz-hutomi-abdurahman-7b1b12198/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href="https://www.facebook.com/fawaz.hutomiabdurahman" target="_blank"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
+                        <li><a href="https://www.instagram.com/hutomifawaza/" target="_blank"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                        <li><a href="https://github.com/FawazHutomiA" target="_blank"><span class="ico-circle"><i class="bi bi-github"></i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/fawaz-hutomi-abdurahman-7b1b12198/" target="_blank"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
